# kk_OClaw

./: .dockerignore  .gitignore  CONTRIBUTING.md  Install.md  LICENSE  Makefile  README.en.md  README.md  README_zh.md  SECURITY.md  config.example.yaml  env.example  kkoclaw.code-workspace  start.sh
backend/: CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  debug.py  gateway_main.py  langgraph.json  pyproject.toml  ruff.toml
desktop/: .gitignore  package.json  setup.bat  setup.sh
desktop-electron/: .gitignore  .npmrc  backend.js  electron-builder.yml  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.preload.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: app_menu.rs  backend.rs  commands.rs  lib.rs  main.rs  shortcuts.rs  tray.rs  updater.rs
docker/: docker-compose-dev.yaml  docker-compose.yaml
docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTH_TEST_DOCKER_GAP.md  AUTH_TEST_PLAN.md  AUTH_UPGRADE.md  AUTO_TITLE_GENERATION.md  CODING_AGENT.md  CONFIGURATION.md  DESKTOP_RELEASE.md  FILE_UPLOAD.md  GUARDRAILS.md  MCP_SERVER.md  MEMORY_IMPROVEMENTS.md  MEMORY_IMPROVEMENTS_SUMMARY.md  MEMORY_SETTINGS_REVIEW.md  PATH_EXAMPLES.md  README.md  SETUP.md  STREAMING.md  TAB_SWITCHING_RUNTIME_PLAN.md  TITLE_GENERATION_IMPLEMENTATION.md  TODO.md  memory-settings-sample.json  middleware-execution-flow.md  plan_mode_usage.md  rfc-create-deerflow-agent.md  rfc-extract-shared-modules.md  rfc-grep-glob-tools.md  summarization.md  task_tool_improvements.md  (+1 more)
(+741 files in other folders)
